--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,5 @@
 html {
-  box-sizing: border-box;
-}
-
-*, *::before, *::after {
-  box-sizing: inherit;
+  font-family: Overpass, sans-serif;
 }
 
 h1 {
